@@ -1,6 +1,11 @@
+2007-12-20  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed to parse RPL_ISUPPORT(005).
+	Changed to use nickname length and modes count in the ISupportInfo.
+
 2007-12-19  Satoshi Nakagawa <artension@gmail.com>
 
-	Decreased the font size for the member list and the server tree in "Deep Ocean" theme.
+	Decreased the font size of the member list and the server tree in "Deep Ocean" theme.
 
 ==== LimeChat 0.14.1 ====
 
